# kursach

./: .gitignore  Dockerfile  Makefile  build.bat  docker-compose.yml
.github/workflows/: build.yml
backend/: auth.py  database.py  format_check.py  pyproject.toml  requirements.txt  server.py  setup.py  strahovochka.db
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
