[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strahovochka"
version = "1.0.0"
description = "CRM система для страховой компании"
readme = "README.md"
authors = [
    {name = "Страховочка Team", email = "info@strahovochka.ru"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Insurance Companies",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Insurance",
]

dependencies = [
    "flask>=2.3.3",
    "flask-cors>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.9.1",
    "flake8>=6.1.0",
]
prod = [
    "gunicorn>=20.1.0",
]

[project.scripts]
strahovochka = "server:run_server"
strahovochka-init = "database:init_database"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=."